--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "scripts": {
     "test": "node node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=__test__/jasmine.json"
   },
+  "engines": {
+    "node": ">= 6.0.0"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/NickNaso/hertzy.git"
