--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "decoupling"
   ],
   "scripts": {
-    "test": "node node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=__test__/jasmine.json"
+    "test": "jasmime JASMINE_CONFIG_PATH=__test__/jasmine.json"
   },
   "engines": {
     "node": ">= 6.0.0"
