--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "decoupling"
   ],
   "scripts": {
-    "test": "jasmime JASMINE_CONFIG_PATH=__test__/jasmine.json",
-    "test-travis": "node node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=__test__/jasmine.json"
+    "test": "node ./node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=__test__/jasmine.json",
+    "test-travis": "node node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=__test__/jasmine.json",
+    "test-appveyor": "node ./node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=__test__/jasmine.json"
   },
   "engines": {
     "node": ">= 6.0.0"
