--- a/package.json
+++ b/package.json
@@ -38,6 +38,9 @@
   },
   "homepage": "https://github.com/NickNaso/hertzy#readme",
   "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0",
     "jasmine": "^2.8.0"
   }
 }
