--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,11 @@
 { 
-    "extends": "airbnb-base"
+    "extends": "airbnb-base",
+    "rules": {
+        "semi": "off",
+        "comma-dangle": "off",
+        "strict": "off",
+        "arrow-parens": "off",
+        "indent": ["error", 4],
+        "no-underscore-dangle": "off"
+    }
 }
