Add linter before execute test

--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "decoupling"
   ],
   "scripts": {
-    "test": "node ./node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=__test__/jasmine.json",
-    "test-travis": "node node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=__test__/jasmine.json",
-    "test-appveyor": "node ./node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=__test__/jasmine.json",
-    "lint": "./node_modules/.bin/eslint index.js"
+    "test": "npm run lint && node ./node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=__test__/jasmine.json",
+    "test-travis": "npm run lint && node node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=__test__/jasmine.json",
+    "test-appveyor": "npm run lint && node ./node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=__test__/jasmine.json",
+    "lint": "./node_modules/.bin/eslint index.js ./lib"
   },
   "engines": {
     "node": ">= 6.0.0"
