--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,10 @@
         "strict": "off",
         "arrow-parens": "off",
         "indent": ["error", 4],
-        "no-underscore-dangle": "off"
+        "no-underscore-dangle": "off",
+        "no-restricted-syntax": "off",
+        "no-prototype-builtins": "off",
+        "class-methods-use-this": "off",
+        "max-len": ["error", 120]
     }
 }
