Prepare the release 0.1.0

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "url": "git+https://github.com/NickNaso/hertzy.git"
   },
   "author": "Nicola Del Gobbo <nicoladelgobbo@gmail.com>",
-  "contributors": [{
+  "contributors": [
+    {
       "name": "Nicola Del Gobbo",
       "email": "nicoladelgobbo@gmail.com"
     },
