--- a/package.json
+++ b/package.json
@@ -43,15 +43,17 @@
   },
   "homepage": "https://github.com/NickNaso/hertzy#readme",
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "@babel/core": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "babel-loader": "^8.0.6",
+    "core-js": "^3.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.12.0",
     "jasmine": "^2.8.0",
-    "webpack": "^4.29.5",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.32.0",
     "webpack-cli": "^3.2.3"
   }
 }
