--- a/package.json
+++ b/package.json
@@ -44,14 +44,20 @@
   "homepage": "https://github.com/NickNaso/hertzy#readme",
   "devDependencies": {
     "@babel/core": "^7.4.4",
-    "@babel/polyfill": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "babel-loader": "^8.0.6",
-    "core-js": "^3.1.1",
+    "core-js": "^3.1.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.12.0",
     "jasmine": "^2.8.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^5.0.0",
+    "rollup-plugin-terser": "^5.0.0",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.32.0",
     "webpack-cli": "^3.2.3"
