--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hertzy",
   "version": "0.1.0",
   "description": "Event bus channel",
-  "main": "index.js",
+  "module": "esm/index.js",
   "keywords": [
     "events",
     "mediator",
@@ -13,10 +13,8 @@
     "test": "npm run lint && node ./node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=__test__/jasmine.json",
     "test-travis": "npm run lint && node node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=__test__/jasmine.json",
     "test-appveyor": "npm run lint && node ./node_modules/jasmine/bin/jasmine.js JASMINE_CONFIG_PATH=__test__/jasmine.json",
-    "lint": "./node_modules/.bin/eslint index.js ./lib"
-  },
-  "engines": {
-    "node": ">= 6.0.0"
+    "lint": "./node_modules/.bin/eslint index.js ./lib",
+    "prepare": "rollup --config"
   },
   "repository": {
     "type": "git",
@@ -42,9 +40,12 @@
     "url": "https://github.com/NickNaso/hertzy/issues"
   },
   "homepage": "https://github.com/NickNaso/hertzy#readme",
+  "files": [
+    "esm/*",
+    "umd/*"
+  ],
   "devDependencies": {
     "@babel/core": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.4",
     "babel-loader": "^8.0.6",
     "core-js": "^3.1.2",
@@ -57,9 +58,6 @@
     "rollup-plugin-json": "^4.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^5.0.0",
-    "rollup-plugin-terser": "^5.0.0",
-    "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.32.0",
-    "webpack-cli": "^3.2.3"
+    "rollup-plugin-terser": "^5.0.0"
   }
 }
