--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hertzy-browser",
-  "version": "0.1.0",
+  "name": "hertzy",
+  "version": "0.1.0-browser",
   "description": "Event bus channel",
   "module": "esm/index.js",
   "keywords": [
