--- a/appveyor.yml
+++ b/appveyor.yml
@@ -28,6 +28,19 @@ environment:
     platform: x64
   - nodejs_version: "12"
     platform: x86
+  - nodejs_version: "13"
+    platform: x86
+  - nodejs_version: "13"
+    platform: x64
+  - nodejs_version: "14"
+    platform: x86 
+  - nodejs_version: "14"
+    platform: x64
+  - nodejs_version: "15"
+    platform: x86  
+  - nodejs_version: "15"
+    platform: x64
+  
 
 install:
   # - where npm
